# minergate-cli

./: CMakeLists.txt  README.md  pool_config.json
cmake/: FindOpenCL.cmake
lindependencies/: minergate  minergate-cli
lindependencies/deb4/lib/: libQt5Network.so.5  libQt5Network.so.5.7.0
lindependencies/rpm4/lib/: libQt5Core.so.5  libQt5DBus.so.5  libQt5DBus.so.5.5.0  libQt5Network.so.5  libQt5Network.so.5.5.0  libcudart.so.6.5  libcudart.so.6.5.19
lindependencies/scripts/: preinst
lindependencies/share/applications/: minergate.desktop
macdependencies/: Info.plist.in  install_bfgminer.txt  no-pie.py  patch-rpath.bash  start
sources/: CMakeLists.txt
sources/bcrypt/: CMakeLists.txt
sources/bcrypt/src/: ow-crypt.h
sources/crypto-lite/: CMakeLists.txt
sources/crypto-lite/contrib/epee/include/: warnings.h
sources/crypto-lite/src/: CMakeLists.txt
sources/crypto-lite/src/crypto/: chacha8.h  crypto.cpp  crypto.h  generic-ops.h  hashlite.h  slow-hash.c
sources/cryptonote-retail/: Makefile
sources/cryptonote-retail/contrib/epee/include/: misc_log_ex.h
sources/cryptonote-retail/contrib/epee/include/storages/: http_abstract_invoke.h
sources/cryptonote-retail/src/: CMakeLists.txt
sources/cryptonote-retail/src/crypto/: chacha8.h  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash.c
sources/cryptonote-retail/src/crypto/slow_hash_soft/: slow-hash-soft-monero.c
sources/cryptonote-retail/src/cryptonote_core/: blockchain_storage.h
sources/cryptonote-retail/src/rpc/: core_rpc_server.cpp
sources/cryptopp/: CMakeLists.txt  config.h
sources/cudaminer/: CMakeLists.txt
sources/cudaminer/src/: cryptonotecudaminer.cpp  cudamanager.cpp  cudaminer.cpp  ethcudaminer.cpp
sources/cudaminer/src/cu_cryptonote/: CMakeLists.txt  cryptonight.cuh  cuda_cryptonight_aes.cuh  cuda_cryptonight_core.cu  cuda_cryptonight_extra.cu  cudadefs.h
sources/cudaminer/src/cu_ethereum/: CMakeLists.txt  ethash_cuda_miner_kernel.cu  ethash_cuda_miner_kernel.h  ethash_cuda_miner_kernel_globals.h
sources/cudaminer/src/cudaminer/: cryptonotecudaminer.h  cudadeviceprops.h  cudamanager.h  cudaminer.h  cudaminer_p.h  ethcudaminer.h
sources/ethereum/: CMakeLists.txt
sources/ethereum/ethutils/: CMakeLists.txt  dagcontroller.cpp  dagcontroller.h  testdata.h
sources/ethereum/libdevcore/: Assertions.h  CMakeLists.txt  Common.h  CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.cpp  FixedHash.h  Guards.h  SHA3.cpp  SHA3.h
sources/ethereum/libethash/: CMakeLists.txt  ethash.h  internal.c  internal.h  io.c
sources/ethereum/libethcore/: CMakeLists.txt  EthashAux.cpp  EthashAux.h  Exceptions.h
sources/gpu-tester/: CMakeLists.txt
sources/gpu-tester/src/: gputester.cpp  gputester.h  main.cpp
sources/miner-abstract/: CMakeLists.txt
sources/miner-abstract/src/: abstractcpuminerworker.cpp  abstractcpuminerworker_p.cpp  abstractgpumanager.cpp  abstractgpuminer.cpp  abstractminerworker.cpp  gpuminerworker.cpp  hrcounter.cpp  noncectl.cpp
sources/miner-abstract/src/miner-abstract/: abstractcpuminerworker.h  abstractcpuminerworker_p.h  abstractgpumanager.h  abstractgpumanager_p.h  abstractgpuminer.h  abstractgpuminer_p.h  abstractminerworker.h  abstractminerworker_p.h  gpuminerworker.h  hrcounter.h  minerabstractcommonprerequisites.h  miningjob.h  noncectl.h  shareevent.h
sources/miner-console-application/: CMakeLists.txt  prepare_mac_bin.sh
sources/miner-console-application/src/: gputester.cpp  gputester.h  main.cpp
sources/miner-core/: CMakeLists.txt  CNPlugin.cmake
sources/miner-core/src/: abstractminerengine.cpp  coin.cpp  coinmanager.cpp  cryptonoteengine.cpp  ethereumengine.cpp  gpumanagercontroller.cpp  poolconfig.cpp  serverapi.cpp
sources/miner-core/src/miner-core/: abstractminerengine.h  coin.h  coinmanager.h  cryptonoteengine.h  ethereumengine.h  gpumanagercontroller.h  minercorecommonprerequisites.h  poolconfig.h  serverapi.h
sources/miner-impl/: CMakeLists.txt
sources/miner-impl/src/: abstractminerimpl.cpp  cpuminerworkerfactory.cpp
sources/miner-impl/src/cryptonote/: cryptonoteminerimpl.cpp  cryptonoteworker.cpp  stratumclient.cpp
sources/miner-impl/src/ethereum/: ethereumminerimpl.cpp  ethereumworker.cpp  poolclient.cpp  poolthread.cpp
sources/miner-impl/src/miner-impl/: abstractminerimpl.h  abstractminerimpl_p.h  cpuminerworkerfactory.h  minerimplcommonprerequisites.h  stratumadapter.h
sources/miner-impl/src/miner-impl/cryptonote/: cryptonoteminerimpl.h  cryptonoteworker.h  stratumclient.h
sources/miner-impl/src/miner-impl/ethereum/: ethereumminerimpl.h  ethereumworker.h  ethstratumadapter.h  poolclient.h  poolthread.h
sources/networkutils/: CMakeLists.txt
sources/networkutils/src/: downloadmanager.cpp  jsonrpcclient.cpp  networkenvironment.cpp
sources/networkutils/src/networkutils/: downloadmanager.h  jsonrpcclient.h  networkenvironment.h  networkutilscommonprerequisites.h
sources/openclminer/: CMakeLists.txt
sources/openclminer/src/: openclmanager.cpp  openclminer.cpp  openclminer_p.cpp
sources/openclminer/src/cryptonote/: cryptonight.cl  cryptonoteoclminer.cpp  cryptonoteoclminer.h
sources/openclminer/src/ethereum/: clutils.h  ethash_cl_miner_kernel.cl  ethoclminer.cpp  ethoclminer.h
sources/openclminer/src/openclminer/: cltypes.h  openclmanager.h  openclminer.h  openclminer_p.h
sources/qjsonrpc/: CMakeLists.txt
sources/qjsonrpc/src/: qjsonrpcadapter.cpp  qjsonrpcclient.cpp  qjsonrpcnetworkengine.cpp
sources/qjsonrpc/src/qjsonrpc/: qjsonrpcadapter.h  qjsonrpcclient.h  qjsonrpccommonprerequisites.h  qjsonrpcnetworkengine.h
sources/utils/: CMakeLists.txt
sources/utils/src/: familyinfo.cpp  hardinfo.cpp  logger.cpp  settings.cpp  simplecrypt.cpp
sources/utils/src/utils/: environment.h  familyinfo.h  hardinfo.h  logger.h  settings.h  settings_p.h  signalblocker.h  simplecrypt.h  utilscommonprerequisites.h
